crates/bingo-surface-tui/src/screens/snapshots/bingo_surface_tui__screens__opening__opening_field_80x24.snap
---
source: crates/bingo-surface-tui/src/screens/opening.rs
expression: "in_look(truecolor(), || playing(80, 24, t))"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"            ▄▄▀   ▄        ▀▀  ▄▀▀▀▀          ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀  ▀▀▀▀▀▀ ▄       "
"    ▄▄   ▄  ▀▀▀  ▄▄▄▄      ▀▀  ▀▀▀▀▀          ▀▀▀▀▀▀▀▀▀▀▀▀       ▀  ▄           "
"    ▀▀   ▄▀ ▀▀▀  ▀▀▀▀▀      ▀▀▀▀▀▀▀▀  ▀▀▀▀   ▄▀▀▄▀▀▀▀▀▀▀▀▀▀                     "
"   ▀    ▄▀▄    ▀▀▀▀▀▀▀      ▄  ▀      ▀▀▀▀  ▄▀▀▀▀▀▄ ▀▄▀▀▀▀ ▄▄     ▀▀▀ ▀▀▀▀▀     "
"                       ▀▀    ▀ ▀      ▀▀▀▀ ▄▀▀▀▀▀▀▀▀ ▀▀▄ ▀▀▀▀▀▀                 "
"                                      ▀▀▀▀ ▀▀▀▀▀▀▀▀▀ ▀ ▀▀▄ ▀▀▀▀                 "
"                        ▄ ▀  ▄▄ ▄  ▀  ▀▀▀▀ ▀▀▀▀▀▀▀▀▀▄▀▄ ▀▀▀                     "
"▀   ▀    ▀▀   ▄▄▄▄▄▄                  ▀▀▀▀  ▀▀▀▀▀▀▀▀▀▀▀▄ ▀▀  ▀   ▄▄▄  ▄▄▄▄      "
"     ▀▀   ▀▄ ▄▄▀  ▀▀▀▀▀     ▄▄▄▀▀▀▀▀  ▀▀▀▀  ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀  ▀                  "
"     ▀▀      ▀▀▀  ▀▀▀▀  ▄▄  ▀▀ ▀▀▀▀▀▀ ▀▀▀▀▄ ▀▀▀▀▀▀▀▀▀▀▀ ▀▀▀▀▄  ▀▄  ▀            "
"              ▀▀            ▀  ▀▀▀▀▀▄        ▀▀▀▀▀▀▀▀▀▄▀▀▀▄▄▀▄  ▀▀▀▄▄▄          "
" ▀   ▄▀▀    ▄               ▀▀▄▄▄▀▀▀    ▀     ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀  ▀▀▀▀▀▀▀▄▄       "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
