crates/bingo-surface-tui/src/screens/snapshots/bingo_surface_tui__screens__opening__opening_field_daylight.snap
---
source: crates/bingo-surface-tui/src/screens/opening.rs
assertion_line: 43
expression: "in_look(daylight(), || playing(80, 24, 2.6))"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"            ▄▄▀   ▄        ▀▀  ▄▀▀▀▀          ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀  ▀▀▀▀▀▀ ▄       "
"    ▄▄   ▄  ▀▀▀  ▄▄▄▄      ▀▀  ▀▀▀▀▀          ▀▀▀▀▀▀▀▀▀▀▀▀       ▀  ▄           "
"    ▀▀   ▄▀ ▀▀▀  ▀▀▀▀▀      ▀▀▀▀▀▀▀▀  ▀▀▀▀   ▄▀▀▄▀▀▀▀▀▀▀▀▀▀                     "
"   ▀    ▄▀▄    ▀▀▀▀▀▀▀      ▄  ▀      ▀▀▀▀  ▄▀▀▀▀▀▄ ▀▄▀▀▀▀ ▄▄     ▀▀▀ ▀▀▀▀▀     "
"                       ▀▀    ▀ ▀      ▀▀▀▀ ▄▀▀▀▀▀▀▀▀ ▀▀▄ ▀▀▀▀▀▀                 "
"                                      ▀▀▀▀ ▀▀▀▀▀▀▀▀▀ ▀ ▀▀▄ ▀▀▀▀                 "
"                        ▄ ▀  ▄▄ ▄  ▀  ▀▀▀▀ ▀▀▀▀▀▀▀▀▀▄▀▄ ▀▀▀                     "
"▀   ▀    ▀▀   ▄▄▄▄▄▄                  ▀▀▀▀  ▀▀▀▀▀▀▀▀▀▀▀▄ ▀▀  ▀   ▄▄▄  ▄▄▄▄      "
"     ▀▀   ▀▄ ▄▄▀  ▀▀▀▀▀     ▄▄▄▀▀▀▀▀  ▀▀▀▀  ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀  ▀                  "
"     ▀▀      ▀▀▀  ▀▀▀▀  ▄▄  ▀▀ ▀▀▀▀▀▀ ▀▀▀▀▄ ▀▀▀▀▀▀▀▀▀▀▀ ▀▀▀▀▄  ▀▄  ▀            "
"              ▀▀            ▀  ▀▀▀▀▀▄        ▀▀▀▀▀▀▀▀▀▄▀▀▀▄▄▀▄  ▀▀▀▄▄▄          "
" ▀   ▄▀▀    ▄               ▀▀▄▄▄▀▀▀    ▀     ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀  ▀▀▀▀▀▀▀▄▄       "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
